<resources>
    <string name="app_name" translatable="false">MyMovie</string>
    <string name="title">Title</string>
    <string name="lang">Language</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorite</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="lorem">Lorem</string>
    <string name="description">Description</string>
    <string name="detail_film">Movie Detail</string>
    <string name="language_setting">Language Setting</string>
    <string name="back_button">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unfavorited">Remove from Favorite</string>
    <string name="favorited">Add to Favorite</string>
    <string name="search">Search</string>
</resources>
