<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_to_purple">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:paddingLeft="5sp"
                android:paddingTop="5sp"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_title"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="3sp"
                android:paddingLeft="5sp"
                android:text="@string/genre"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ci_detail_poster"
                android:layout_width="160sp"
                android:layout_height="220sp"
                android:layout_below="@id/tv_detail_genre"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/iv_label_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_genre"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@id/ci_detail_poster"
                android:src="@drawable/ic_star_favorite_black_24dp" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_genre"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@id/iv_label_rating"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/iv_label_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_label_rating"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_toRightOf="@id/ci_detail_poster"
                android:src="@drawable/ic_release_date" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_label_rating"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_toRightOf="@id/iv_label_release_date"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="17sp" />
            <ImageView
                android:id="@+id/iv_label_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language"
                android:layout_below="@id/iv_label_release_date"
                android:layout_toRightOf="@id/ci_detail_poster"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"/>
            <TextView
                android:id="@+id/tv_detail_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textAllCaps="true"
                android:layout_below="@id/tv_detail_release_date"
                android:layout_toRightOf="@id/iv_label_language"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="5sp"/>
            <TextView
                android:id="@+id/tv_label_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_below="@id/ci_detail_poster"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"/>
            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:layout_below="@id/tv_label_overview"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="5sp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>